
=== (next) ===
BREAKING: dropped Node,js < v6 support
FIXED: LogFace to use internal queue for async log messages

=== 1.3.0 (2017-08-11) ===
FIXED: minor fixes & improvements to unit tests
CHANGED: to auto-enabled CCM prodMode, if NODE_ENV=production
NEW: FTN3 v1.7 custom result types
NEW: improved FTN3 feature vs. revision control

=== 1.2.2 (2017-08-06) ===
FIXED: not populated module.exports in repeated browser require()
FIXED: returned browser globals documentation

=== 1.2.1 (2017-08-06) ===
FIXED: not to show webpack warning on node require
FIXED: cosmetic doc & code fixes

=== 1.2.0 (2017-08-06) ===
BREAKING: removed AMD/minified dist files
FIXED: debug console.log() when Variant types are used
CHANGED: to use eslint & webpack for testing
NEW: webpack-ready
NEW: NativeIface.spec() API
NEW: FTN4 Ping-Pong client iface support

=== 1.1.0 (2017-08-04) ===
FIXED: string minlen/maxlen processing, even if regex is set
CHANGED: to check type contraints only on top type level
NEW: FTN3 v1.6 support

=== 1.0.1 (2017-08-04) ===
FIXED: to formally support FTN3 v1.5 for executor

=== 1.0.0 (2017-08-03) ===
BREAKING: removed bower support
NEW: FTN3 v1.5 support

=== 0.9.1 (2017-07-20) ===
FIXED: readme file

=== 0.9.0 (2017-07-19) ===
CHANGED: to accept null values for default "null" params
CHANGED: changed to allow type definition shortcut as per FTN3 v1.4
CHANGED: imports handling to workaround diamond problem as per FTN3: v1.4
NEW: FTN3 v1.4 support

=== 1.5.8 (2017-07-09) ===
FIXED: re-publish with proper npm packaging

=== 0.8.4 (2017-07-09) ===
CHANGED: to use FutoIn CID tool for development
NEW: Revised development tools