@@ -161,11 +161,6 @@ exports.HTTPComms.prototype =
         }
 
         httpreq.send( rawreq );
-
-        if ( !ctx.expect_response )
-        {
-            as.success();
-        }
     },
 };
 
